[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu_inicio/Wedgie Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu_inicio/Menu_inicio.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="Menu_inicio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 585.0
margin_bottom = 1009.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 355.0
margin_right = 570.0
margin_bottom = 394.0
custom_fonts/font = SubResource( 1 )
text = "SELECCIONAR NIVEL"
align = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 414.0
margin_right = 570.0
margin_bottom = 455.0
custom_fonts/font = SubResource( 2 )
text = "Nivel 1"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 475.0
margin_right = 570.0
margin_bottom = 516.0
custom_fonts/font = SubResource( 2 )
text = "Nivel 2"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 536.0
margin_right = 570.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 2 )
text = "Nivel 3"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 597.0
margin_right = 570.0
margin_bottom = 638.0
custom_fonts/font = SubResource( 2 )
text = "Nivel 4"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
