extends Control



func _on_Button_pressed():
	get_tree().change_scene("res://nivel_prueba/Nivel_prueba.tscn")


func _on_Button2_pressed():
	get_tree().change_scene("res://niveles/niveles_J/nivel_3/Level_3.tscn")


func _on_Button3_pressed():
	get_tree().change_scene("res://niveles/niveles_J/nivel_5/Level2.tscn")


func _on_Button4_pressed():
	get_tree().change_scene("res://niveles/niveles_J/nivel_6/Level3.tscn")
